--- a/geoapi/templates/mainPage1.html
+++ b/geoapi/templates/mainPage1.html
@@ -53,8 +53,8 @@
                     <div id="selecte">
                         <label>Par type: </label>
                         <select id="selected">
-                            <option value="number_off_lamp_On">Allumer</option>
-                            <option value="number_off_lamp_Off">Eteindre</option>
+                            <option value="number_off_lamp_On">Allumé</option>
+                            <option value="number_off_lamp_Off">Eteint</option>
                         </select>
                     </div>
                     <div id="chart">
