--- a/geoapi/templates/mainPage1.html
+++ b/geoapi/templates/mainPage1.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Welcome</title>
+        <title>Application</title>
         <link rel="stylesheet"  type="text/css" href="{% static 'css/mainCss.css'  %}">
         <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css">
@@ -15,7 +15,7 @@
        <img src="{% static "imgs/appName.png" %}" alt="le port de djibouti" class="appName"/>
         <p><a>Bienvenu Abdillahi</a><a><i class="fas fa-power-off" id="logout"></i></a></p>
     </div>
-    <div class="body">
+    <div class="body" id="body">
         <div id="map" class="map"></div>
         <a class="control zoom" id="zoomin"><i class="fas fa-plus"></i></a><span id="zoominspan">Zoom +</span>
         <a class="control zoom" id="zoomout"><i class="fas fa-minus"></i></a><span id="zoomoutspan">Zoom -</span>
@@ -41,8 +41,8 @@
                         <tr id="title">
                             <th>Nom</th>
                             <th>Station</th>
-                            <th>Allumer</th>
-                            <th>Eteint</th>
+                            <th>Allumés</th>
+                            <th>Eteints</th>
                             <th>Différence</th>
                             <th>Services</th>
                         </tr>
@@ -93,11 +93,11 @@
                 </div>
                 <div id="numberOff-information">
                     <label for="numberOff">Eteint</label>
-                    <input type="number" id="numberOff" min="0"/>
+                    <input type="number" id="numberOff" min="0" required="required"/>
                 </div>
                 <div id="numberOn-information">
                     <label for="numberOn">Allumer</label>
-                    <input type="number" id="numberOn" min="0" />
+                    <input type="number" id="numberOn" min="0" required="required" />
                 </div>
                 <div id="services-information">Services:
                     <input type="checkbox" id="wifi" /> wifi
