--- a/geoapi/templates/mainPage1.html
+++ b/geoapi/templates/mainPage1.html
@@ -11,8 +11,8 @@
     </head>
     <body>
     <div class="header">
-       <img src="{% static "imgs/logo.png" %}" alt="le port de djibouti" />
-       <img src="{% static "imgs/appName.png" %}" alt="le port de djibouti" class="appName"/>
+       <img src="{% static "imgs/logo.jpeg" %}" alt="le port de djibouti" />
+       <img src="{% static "imgs/appName.jpeg" %}" alt="le port de djibouti" class="appName"/>
         <p><a>Bienvenu Abdillahi</a><a><i class="fas fa-power-off" id="logout"></i></a></p>
     </div>
     <div class="body" id="body">
