--- a/geoapi/templates/mainPage1.html
+++ b/geoapi/templates/mainPage1.html
@@ -21,8 +21,8 @@
         <a class="control zoom" id="zoomout"><i class="fas fa-minus"></i></a><span id="zoomoutspan">Zoom -</span>
         <a class="control zoom" id="zome-extends"><i class="fas fa-home"></i></a><span id="extendsspan">Centrer</span>
         <a class="control location" id="location"><i class="fas fa-map-marker-alt"></i></a><span id="locationspan">Me localiser</span>
-        <a class="fond" id="OSM">OSM</a>
-        <a class="fond active" id="satellite">Satellite</a>
+        <a class="fond active" id="OSM">OSM</a>
+        <a class="fond" id="satellite">Satellite</a>
         <p id="position-mouse"><a class="lat"></p>
         <div id="Ol-OSM">
             <a href="https://openlayers.org/" id="ol" target="_blank">Openlayers</a>
