--- a/geoapi/templates/mainPage1.html
+++ b/geoapi/templates/mainPage1.html
@@ -4,6 +4,7 @@
     <head>
         <title>Application</title>
         <link rel="stylesheet"  type="text/css" href="{% static 'css/mainCss.css'  %}">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css">
         <script src="https://kit.fontawesome.com/2466fa8278.js" crossorigin="anonymous"></script>
@@ -74,6 +75,24 @@
                     <th>Nom</th>
                     <th>Station</th>
                     <th>Distance</th>
+                </tr>
+                 <tr class="data">
+                    <th>1</th>
+                    <th>TFC 6G</th>
+                    <th>Station 01</th>
+                    <th>4500 km</th>
+                </tr>
+                 <tr class="data">
+                    <th>1</th>
+                    <th>TFC 6G</th>
+                    <th>Station 01</th>
+                    <th>4500 km</th>
+                </tr>
+                 <tr class="data">
+                    <th>1</th>
+                    <th>TFC 6G</th>
+                    <th>Station 01</th>
+                    <th>4500 km</th>
                 </tr>
             </table>
         </div>
